# Atelier_CMAKE

./: CMakeLists.txt
.github/workflows/: ci.yml
include/: calculator.h
src/: main.c
src/lib/: calculator.c
